--- a/index.html
+++ b/index.html
@@ -142,5 +142,8 @@
     <p id="caption"> Uruguay&#8217;s Luis Suarez &#40;left&#41; attempts a shot on goal. </p>
     <p id="caption"> French forward Alexandre Lacazette &#40;right&#41; attempts a shot on goal. </p>
     <p> Return to the <a href="#Top">top</a> of the page. </p>
+	<a href="http://validator.w3.org/check?uri=https://qiujeffrey.github.io/home/">
+	<img src="html5_with_css3_+_semantics.png" width="165" height="64" 	alt="HTML5 with CSS3 and Semantics">
+	</a>
 </body>
 </html>
