--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<li> Follow your pass or run into space &#45; this creates plays and moves the ball forward for your team. </li>
 		</ul>
 	<img src = "iniesta.jpg" width = "373.5" height = "512" alt = "Picture of Andres Iniesta in action for Barcelona in 2017." />
-	<p id = "caption"> Midfield maestro Andres Iniesta runs Barcelona&#8217;s legendary midfield using the tiki&#45;taka system, which is based off of thousands of short passes and quick movement. </p>
+	<p class="caption"> Midfield maestro Andres Iniesta runs Barcelona&#8217;s legendary midfield using the tiki&#45;taka system, which is based off of thousands of short passes and quick movement. </p>
 	<!-- Original photo dimensions: 747 by 1024. Photo credit: zimbio.com. -->
 	<h3> Different Types of Short Passes </h3>
 		<dl class = "descriptivelist">
@@ -61,7 +61,7 @@
             <dd> Player 1 is in the defensive end of the field and is pressured by opponents. Player 1 passes the ball far away to relieve the pressure on the team, and possibly start a counterattack. </dd>
         </dl>
     <img src="ozil.jpg" width="768" height="432" alt="Picture of Mesut Ozil representing Germany in an international competition." />
-    <p id="caption"> German playmaker Mesut &Ouml;zil has a gift for assisting his teammates. He is capable of playing very long passes with pinpoint accuracy. </p>
+    <p class="caption"> German playmaker Mesut &Ouml;zil has a gift for assisting his teammates. He is capable of playing very long passes with pinpoint accuracy. </p>
     <!-- Original photo dimensions: 768 by 432. Photo credit: zimbio.com. -->
 	<h2> Dribbling </h2>
 	<p> Dribbling is an essential skill across all levels of soccer. Teams rely on midfielders to weave their way in and out of opponents and create plays as a result of it. Here are the basics of dribbling: </p>
@@ -92,7 +92,7 @@
 		</dl>
 	<img src = "ronaldo.jpg" width = "490" height = "366" alt = "Picture of Cristiano Ronaldo in action against Schalke 04." />
     <!-- Original photo dimensions: 490 by 366. Photo credit: ? -->
-	<p id = "caption"> Cristiano Ronaldo performing a stepover on a defender. The Portuguese winger excels in dribbling, physicality, and finishing. </p>
+	<p class="caption"> Cristiano Ronaldo performing a stepover on a defender. The Portuguese winger excels in dribbling, physicality, and finishing. </p>
 	<h3 class = "list"> Examples of Good Dribblers </h3>
 		<ul class = "list">
 			<li> Lionel Messi &#40;FC Barcelona, Argentina&#41; </li>
@@ -101,7 +101,7 @@
 		</ul>
 	<img src = "coutinho.jpg" width = "480" height = "270" alt = "Picture of Phillippe Coutinho in action for Barcelona in 2017." />
     <!-- Original photo dimensions: 960 by 540. Photo credit: ? -->
-	<p id = "caption"> Phillippe Coutinho, like many Brazilian players before him, is a creative and nimble dribbler. </p>
+	<p class="caption"> Phillippe Coutinho, like many Brazilian players before him, is a creative and nimble dribbler. </p>
 	<p> These are some examples of world&#45;class midfielders with a talent for dribbling. Watch their games or highlights to learn from them. </p>
 	<h2> Finishing </h2>
 	<p> The only way to win in soccer is to score more goals than your opponent, so finishing your chances is a vital skill. Here are some tips on how to strike the ball: </p>
@@ -139,11 +139,12 @@
     <!-- Original photo dimensions: 594 by 418. Photo credit: ? -->
     <img src="lacazette.jpg" width="512" height="384" alt="Picture of Alexandre Lacazette shooting." />
     <!-- Original photo dimensions: 2048 by 1536. Photo credit: ? -->
-    <p id="caption"> Uruguay&#8217;s Luis Suarez &#40;left&#41; attempts a shot on goal. </p>
-    <p id="caption"> French forward Alexandre Lacazette &#40;right&#41; attempts a shot on goal. </p>
+    <p class="caption"> Uruguay&#8217;s Luis Suarez &#40;left&#41; attempts a shot on goal. </p>
+    <p class="caption"> French forward Alexandre Lacazette &#40;right&#41; attempts a shot on goal. </p>
     <p> Return to the <a href="#Top">top</a> of the page. </p>
+	<p> Special thanks to the <a href="sources.html">sources</a> used when creating this page. </p>
 	<a href="http://validator.w3.org/check?uri=https://qiujeffrey.github.io/home/">
-	<img src="html5_with_css3_+_semantics.png" width="165" height="64" 	alt="HTML5 with CSS3 and Semantics">
+	<img src="html5_with_css3_+_semantics.png" width="165" height="64" alt="HTML5 with CSS3 and Semantics">
 	</a>
 </body>
 </html>
