--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1 id = "Top"> Soccer </h1>
 	<h2> Passing </h2>
 	<p> Passing is one of the most basic concepts in soccer. Strong fundamental skills, vision, and teamwork are essential to passing. There are various types of passes. Short passes, such as one&#45;twos, through balls, and overlaps, are intended to move the ball past defenders into space. Long passes, such as clears, switches, and crosses, are intended for picking out an open teammate from a farther distance or to set up a counterattack or scoring opportunity. </p>
+	<img id="longimg" src = "iniesta.jpg" width = "360" height = "480" alt = "Picture of Andres Iniesta in action for Barcelona in 2017." />
 	<h3> Short Passing </h3>
 	<p> Short passing is fundamental to playing soccer. Here are some tips on short passing: </p>
 		<ol class = "list">
@@ -17,18 +18,17 @@
 			<li> Make contact with the centre of the ball &#45; this makes your pass stronger and keeps the ball on the ground. </li>
 			<li> Sweep through the ball, to ensure a firm pass. </li>
 		</ol>
-	<p> Here are some things to keep in mind about short passes. </p>
+	<p> Here are some things to keep in mind about short passes: </p>
 		<ul class = "list">
 			<li> Signal to your target that you intend to pass the ball to them &#40;e.g. make eye contact&#41;. Communication is key. </li>
 			<li> The pass should be played on the ground, to make it easier for your teammate to control it. </li>
 			<li> The pass should be played firm so that it is hard to intercept, while still being easy for your teammate to control. </li>
 			<li> Follow your pass or run into space &#45; this creates plays and moves the ball forward for your team. </li>
 		</ul>
-	<img src = "iniesta.jpg" width = "373.5" height = "512" alt = "Picture of Andres Iniesta in action for Barcelona in 2017." />
-	<p class="caption"> Midfield maestro Andres Iniesta runs Barcelona&#8217;s legendary midfield using the tiki&#45;taka system, which is based off of thousands of short passes and quick movement. </p>
-	<!-- Original photo dimensions: 747 by 1024. Photo credit: zimbio.com. -->
+	<p id="longcaption"> Midfield maestro Andres Iniesta runs Barcelona&#8217;s legendary midfield using the tiki&#45;taka system, which is based off of thousands of short passes and quick movement. </p>
+	<!-- Original photo dimensions: 720 by 960. Photo credit: zimbio.com. -->
 	<h3> Different Types of Short Passes </h3>
-		<dl class = "descriptivelist">
+		<dl class = "dlist">
 			<dt> One&#45;Two </dt>
 			<dd> Player 1 passes the ball to Player 2, then Player 1 runs around an opponent into space. Then, Player 2 passes the ball back to Player 1, who is now open. </dd>
 			<dt> Overlap </dt>
@@ -44,7 +44,7 @@
 			<li> Make contact with the bottom part of the ball &#45; this gives your pass distance and height to go over opponents. </li>
 			<li> Sweep through the ball, to ensure a firm pass. </li>
 		</ol>
-	<p> Here are some things to keep in mind about long passes. </p>
+	<p> Here are some things to keep in mind about long passes: </p>
 		<ul class = "list">
 			<li> Signal to your target that you intend to pass the ball to them &#40;e.g. make eye contact&#41;. Communication is key. </li>
 			<li> The pass should be played in the air, to go past opponents. </li>
@@ -52,7 +52,7 @@
 			<li> Follow your pass or run into space &#45; this creates plays and moves the ball forward for your team. </li>
 		</ul>
     <h3> Different Types of Long Passes </h3>
-        <dl class="descriptivelist">
+        <dl class="dlist">
             <dt> Cross </dt>
             <dd> Player 1 is in the attacking end of the field and sees Player 2 open in the other team penalty box. Player 1 passes the ball in the air to Player 2 so Player 2 can volley or head the ball to score. </dd>
             <dt> Switch </dt>
@@ -60,17 +60,18 @@
             <dt> Clear </dt>
             <dd> Player 1 is in the defensive end of the field and is pressured by opponents. Player 1 passes the ball far away to relieve the pressure on the team, and possibly start a counterattack. </dd>
         </dl>
-    <img src="ozil.jpg" width="768" height="432" alt="Picture of Mesut Ozil representing Germany in an international competition." />
+    <img id="fatimg" src="ozil.jpg" width="768" height="432" alt="Picture of Mesut Ozil representing Germany in an international competition." />
     <p class="caption"> German playmaker Mesut &Ouml;zil has a gift for assisting his teammates. He is capable of playing very long passes with pinpoint accuracy. </p>
     <!-- Original photo dimensions: 768 by 432. Photo credit: zimbio.com. -->
 	<h2> Dribbling </h2>
-	<p> Dribbling is an essential skill across all levels of soccer. Teams rely on midfielders to weave their way in and out of opponents and create plays as a result of it. Here are the basics of dribbling: </p>
+	<p> Dribbling is an essential skill across all levels of soccer. Teams rely on midfielders to weave their way in and out of opponents and create plays as a result of it. Players who can dribble with speed while retaining control of the ball are beneficial to a team. </p>
+	<p> Here are the basics of dribbling: </p>
 		<ol class = "list">
 			<li> Use the instep &#40;laces&#41; part of your foot to dribble the ball. </li>
 			<li> Use the inside and outside of your foot to turn with the ball. </li>
 			<li> Take small touches, to keep the ball close to you. </li>
 		</ol>
-	<p> Here are some things to keep in mind about dribbling. </p>
+	<p> Here are some things to keep in mind about dribbling: </p>
 		<ul class = "list">
 			<li> When opponents are in front of you, take smaller touches to keep the ball close to you. You should take a touch for every step of your other foot. </li>
 			<li> When opponents are behind you, take larger touches to move faster with the ball. You should take a touch for every two or three steps of your feet. </li>
@@ -79,7 +80,7 @@
 		</ul>
 	<h3> Skill Moves </h3>
 	<p> An essential component of <a href = "secondindex.html">engaging defenders</a> is confidence. Here are some basic skill moves you can use to get past defenders:  </p>
-		<dl class = "descriptivelist">
+		<dl class = "dlist">
 			<dt> Body Feint </dt>
             <dd> This skill move involves using solely your body to fake going in one direction. It is a simple yet deadly skill to have in your arsenal. </dd>
 			<dt> Stepover </dt>
@@ -90,21 +91,21 @@
             <dd> This skill move involves faking a shot at the net, forcing a defender to commit. </dd>
            
 		</dl>
-	<img src = "ronaldo.jpg" width = "490" height = "366" alt = "Picture of Cristiano Ronaldo in action against Schalke 04." />
+	<img class="img" src = "ronaldo.jpg" width = "490" height = "366" alt = "Picture of Cristiano Ronaldo in action against Schalke 04." />
     <!-- Original photo dimensions: 490 by 366. Photo credit: ? -->
 	<p class="caption"> Cristiano Ronaldo performing a stepover on a defender. The Portuguese winger excels in dribbling, physicality, and finishing. </p>
-	<h3 class = "list"> Examples of Good Dribblers </h3>
+	<h3> Examples of Good Dribblers </h3>
+	<p> These are some examples of world&#45;class players with a talent for dribbling. Watch their games or highlights to learn from them. </p>
 		<ul class = "list">
-			<li> Lionel Messi &#40;FC Barcelona, Argentina&#41; </li>
+			<li> Lionel <a href = "https://en.wikipedia.org/wiki/Lionel_Messi"> Messi</a> &#40;FC Barcelona, Argentina&#41; </li>
 			<li> Phillippe <a href = "https://en.wikipedia.org/wiki/Philippe_Coutinho"> Coutinho</a> &#40;FC Barcelona, Brazil&#41; </li>
-			<li> Neymar &#40;Paris St-Germain, Brazil&#41; </li>
+			<li> <a href = "https://en.wikipedia.org/wiki/Neymar"> Neymar</a> &#40;Paris St-Germain, Brazil&#41; </li>
 		</ul>
-	<img src = "coutinho.jpg" width = "480" height = "270" alt = "Picture of Phillippe Coutinho in action for Barcelona in 2017." />
+	<img class="img" src = "coutinho.jpg" width = "480" height = "270" alt = "Picture of Phillippe Coutinho in action for Barcelona in 2017." />
     <!-- Original photo dimensions: 960 by 540. Photo credit: ? -->
 	<p class="caption"> Phillippe Coutinho, like many Brazilian players before him, is a creative and nimble dribbler. </p>
-	<p> These are some examples of world&#45;class midfielders with a talent for dribbling. Watch their games or highlights to learn from them. </p>
 	<h2> Finishing </h2>
-	<p> The only way to win in soccer is to score more goals than your opponent, so finishing your chances is a vital skill. Here are some tips on how to strike the ball: </p>
+	<p> The only way to win in soccer is to score more goals than your opponent, so finishing your chances is a vital skill. Forwards who can score an equaliser in the dying minutes of an important game are invaluable to a team. Here are some tips on how to strike the ball: </p>
         <ol class="list">
             <li> Push the ball to the side of you, and approach it at around a 45&#176; angle. </li>
             <li> Put your nonkicking foot beside the ball. </li>
@@ -112,15 +113,18 @@
             <li> Swing through the ball, lifting your kicking foot across your body. </li>
             <li> Your momentum should lead you to jump, putting your nonkicking foot outwards, and you should land on your kicking foot. </li>
         </ol>
-        <p> Here are some things to keep in mind about shooting. </p>
+        <p> Here are some things to keep in mind about shooting: </p>
         <ul class="list">
             <li> Most players stop after making contact with the ball &#45; strike through the ball to maximize the power going into the shot. </li>
             <li> Look up when you shoot &#45; this improves your accuracy and awareness of the situation. </li>
             <li> Pick one of the four corners when you shoot. These spots are the hardest to reach for goalkeepers. </li>
             <li> Run after your shot &#45; getting a rebound can lead to a goal for your team. </li>
         </ul>
+	<img class="img" src="lacazette.jpg" width="512" height="384" alt="Picture of Alexandre Lacazette shooting." />
+	<!-- Original photo dimensions: 2048 by 1536. Photo credit: ? -->    
+	<p class="caption"> French forward Alexandre Lacazette attempts a shot on goal. Notice how he bends his foot back to make his shot powerful. </p>
     <h3> Different Types of Shots </h3>
-        <p> Depending on the situation, some shots may work better than others. Here are various shots: </p>
+        <p> Depending on the situation, some shots may work better than others. The following are various shots suitable for different situations: </p>
         <dl class="list">
             <dt> Regular Shot </dt>
             <dd> This type of shot balances accuracy with power. It works best when the goalkeeper is on the goal line, where it is harder for him to reach the corners of the net. The more power put into this shot, the harder it is for the goalkeeper to catch and the more chance of a set piece or rebound for your team. </dd>
@@ -135,16 +139,13 @@
         <li> Using the inside or tip of your foot are the easiest to create spin on the ball. </li>
         <li> Hit the right side of the ball to make it spin towards the left, and vice versa. If you hit the bottom left&#47;right section of the ball, you can get height and curve on your shot which is ideal for set pieces as well as crosses. </li>
         </ol>
-    <img src="suarez.jpg" width="594" height="418" alt="Picture of Luis Suarez shooting." />
-    <!-- Original photo dimensions: 594 by 418. Photo credit: ? -->
-    <img src="lacazette.jpg" width="512" height="384" alt="Picture of Alexandre Lacazette shooting." />
-    <!-- Original photo dimensions: 2048 by 1536. Photo credit: ? -->
-    <p class="caption"> Uruguay&#8217;s Luis Suarez &#40;left&#41; attempts a shot on goal. </p>
-    <p class="caption"> French forward Alexandre Lacazette &#40;right&#41; attempts a shot on goal. </p>
-    <p> Return to the <a href="#Top">top</a> of the page. </p>
+	<img id="wideimg" src="suarez.jpg" width="594" height="418" alt="Picture of Luis Suarez shooting." />
+	<!-- Original photo dimensions: 594 by 418. Photo credit: ? -->
+	<p class="caption"> Uruguay&#8217;s Luis Suarez attempts a shot on goal. </p>
+	<p> Return to the <a href="#Top">top</a> of the page. </p>
 	<p> Special thanks to the <a href="sources.html">sources</a> used when creating this page. </p>
 	<a href="http://validator.w3.org/check?uri=https://qiujeffrey.github.io/home/">
-	<img src="html5_with_css3_+_semantics.png" width="165" height="64" alt="HTML5 with CSS3 and Semantics">
+	<img  id="validator" src="html5_with_css3_+_semantics.png" width="165" height="64" alt="HTML5 with CSS3 and Semantics">
 	</a>
 </body>
 </html>
