--- a/secondindex.html
+++ b/secondindex.html
@@ -1,29 +1,32 @@
 ﻿<!doctype html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<title> Engaging Defenders </title>
-		<link rel="stylesheet" type="text/css" href="format.css" />
-	</ head>
-	<body>
-	<h1> Engaging Defenders </h1>
-	<h2> How do you take on a defender? </h2>
-	<p> 1v1 situations are unavoidable in soccer. Here are some tips to make you an effective dribbler: </p>
-		<ol class = "list">
-			<li> Approach your opponent quickly, taking small touches to keep the ball close to you. </li>
-			<li> Slow down when you get close (about 3-5 feet) to the defender. </li>
-			<li> Perform the skill move. Make it as convincing as possible. </li>
-			<li> Suddenly turn the other direction, accelerating past the defender. </li>
-			<li> Dribble with speed away from the defender. </li>
-		</ol>
-	<h2> Key Concepts </h2>
-	<p> Here are some things to keep in mind about dribbling: </p>
-		<ul class = "list">
-			<li> Change of direction </li>
-			<li> Change of speed </li>
-			<li> Lower your centre of gravity </li>
-			<li> Turn your head and body as part of the fake </li>
-		</ul>
-	<p> Great dribblers have mastery over skill moves and fakes, to the point where they come naturally. These players move the ball extremely efficiently. </p>
-	</body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title> Engaging Defenders </title>
+    <link rel="stylesheet" type="text/css" href="format.css" />
+    </ head>
+    <body>
+        <h1> Engaging Defenders </h1>
+        <h2> How do you take on a defender? </h2>
+        <p> 1v1 situations are unavoidable in soccer. Here are some tips to make you an effective dribbler: </p>
+        <ol class="list">
+            <li> Approach your opponent quickly, taking small touches to keep the ball close to you. </li>
+            <li> Slow down when you get close (about 3-5 feet) to the defender. </li>
+            <li> Perform the skill move. Make it as convincing as possible. </li>
+            <li> Suddenly turn the other direction, accelerating past the defender. </li>
+            <li> Dribble with speed away from the defender. </li>
+        </ol>
+        <h2> Key Concepts </h2>
+        <p> Here are some things to keep in mind about dribbling: </p>
+        <ul class="list">
+            <li> Change of direction </li>
+            <li> Change of speed </li>
+            <li> Lower your centre of gravity </li>
+            <li> Turn your head and body as part of the fake </li>
+        </ul>
+        <p> Great dribblers have mastery over skill moves and fakes, to the point where they come naturally. These players move the ball extremely efficiently. </p>
+        <a href="http://validator.w3.org/check?uri=https://qiujeffrey.github.io/home/">
+            <img id="validator" src="html5_with_css3_+_semantics.png" width="165" height="64" alt="HTML5 with CSS3 and Semantics">
+        </a>
+    </body>
 </html>
