--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <h3> Short Passing </h3>
     <p> Short passing is fundamental to playing soccer. Here are some tips on short passing: </p>
     <ol class="list">
-        <li> Point your non&#45;kicking foot to where you want the ball to go. </li>
+        <li> Point your other foot to where you want the ball to go. </li>
         <li> Use the inside of your foot to pass the ball. This part of your foot has the most area and is the most accurate. </li>
-        <li> Make contact with the centre of the ball &#45; this makes your pass stronger and keeps the ball on the ground. </li>
+        <li> Hit the centre of the ball &#45; this makes your pass stronger and keeps the ball on the ground. </li>
         <li> Sweep through the ball, to ensure a firm pass. </li>
     </ol>
     <p> Here are some things to keep in mind about short passes: </p>
@@ -33,16 +33,16 @@
         <dt> One&#45;Two </dt>
         <dd> Player 1 passes the ball to Player 2, then Player 1 runs around an opponent into space. Then, Player 2 passes the ball back to Player 1, who is now open. </dd>
         <dt> Overlap </dt>
-        <dd> This play is similar to the One&#45;Two. Player 1 passes the ball to Player 2, then Player 1 runs around Player 2 into space. Then, Player 2 passes the ball back to Player 1, who is now open. </dd>
+        <dd> This play is like the One&#45;Two. Player 1 passes the ball to Player 2, then Player 1 runs around Player 2 into space. Then, Player 2 passes the ball back to Player 1, who is now open. </dd>
         <dt> Through Ball </dt>
         <dd> Player 1 sees Player 2 running into space between or behind defenders. Player 1 passes the ball into the open space for Player 2 to latch onto. </dd>
     </dl>
     <h3> Long Passing </h3>
-    <p> Long passing is somewhat similar to short passing. Here are some tips how to play a good long pass: </p>
+    <p> Long passing is somewhat like short passing. Here are some tips how to play a good long pass: </p>
     <ol class="list">
-        <li> Point your non&#45;kicking foot to where you want the ball to go. </li>
+        <li> Point your other foot to where you want the ball to go. </li>
         <li> Use the inside of your foot to pass the ball. Using the tip of your inside or your instep &#40;where your laces are&#41; for more power or height are adequate as well. </li>
-        <li> Make contact with the bottom part of the ball &#45; this gives your pass distance and height to go over opponents. </li>
+        <li> Hit the bottom part of the ball &#45; this gives your pass distance and height to go over opponents. </li>
         <li> Sweep through the ball, to ensure a firm pass. </li>
     </ol>
     <p> Here are some things to keep in mind about long passes: </p>
@@ -62,10 +62,10 @@
         <dd> Player 1 is in the defensive end of the field and is pressured by opponents. Player 1 passes the ball far away to relieve the pressure on the team, and possibly start a counterattack. </dd>
     </dl>
     <img id="fatimg" src="ozil.jpg" width="768" height="432" alt="Picture of Mesut Ozil representing Germany in an international competition." />
-    <p class="caption"> German playmaker Mesut &Ouml;zil has a gift for assisting his teammates. He is capable of playing very long passes with pinpoint accuracy. </p>
+    <p class="caption"> German playmaker Mesut &Ouml;zil has a gift for assisting his teammates. He can play very long passes with pinpoint accuracy. </p>
     <!-- Original photo dimensions: 768 by 432. -->
     <h2> Dribbling </h2>
-    <p> Dribbling is an essential skill across all levels of soccer. Teams rely on midfielders to weave their way in and out of opponents and create plays as a result of it. Players who can dribble with speed while retaining control of the ball are beneficial to a team. </p>
+    <p> Dribbling is an essential skill across all levels of soccer. Teams rely on midfielders to weave their way in and out of opponents and create plays because of it. Players who can dribble with speed while retaining control of the ball are beneficial to a team. </p>
     <p> Here are the basics of dribbling: </p>
     <ol class="list">
         <li> Use the instep &#40;laces&#41; part of your foot to dribble the ball. </li>
@@ -109,14 +109,14 @@
     <p> The only way to win in soccer is to score more goals than your opponent, so finishing your chances is a vital skill. Forwards who can score an equaliser in the dying minutes of an important game are invaluable to a team. Here are some tips on how to strike the ball: </p>
     <ol class="list">
         <li> Push the ball to the side of you, and approach it at around a 45&#176; angle. </li>
-        <li> Put your nonkicking foot beside the ball. </li>
+        <li> Put your other foot beside the ball. </li>
         <li> Bend your foot back to put power into your shot. </li>
         <li> Swing through the ball, lifting your kicking foot across your body. </li>
-        <li> Your momentum should lead you to jump, putting your nonkicking foot outwards, and you should land on your kicking foot. </li>
+        <li> Your momentum should lead you to jump, putting your other foot outwards, and you should land on your kicking foot. </li>
     </ol>
     <p> Here are some things to keep in mind about shooting: </p>
     <ul class="list">
-        <li> Most players stop after making contact with the ball &#45; strike through the ball to maximize the power going into the shot. </li>
+        <li> Most players stop after hitting the ball &#45; strike through the ball to maximize the power going into the shot. </li>
         <li> Look up when you shoot &#45; this improves your accuracy and awareness of the situation. </li>
         <li> Pick one of the four corners when you shoot. These spots are the hardest to reach for goalkeepers. </li>
         <li> Run after your shot &#45; getting a rebound can lead to a goal for your team. </li>
